[gd_scene load_steps=6 format=3 uid="uid://cnpfwfyhpb1s8"]

[ext_resource type="Script" uid="uid://bw2u3hsaj0gdr" path="res://Scripts/enemy.gd" id="1_0830c"]
[ext_resource type="Texture2D" uid="uid://x5nn6leaan5h" path="res://assets/slime.png" id="1_hghv2"]
[ext_resource type="Theme" uid="uid://mox4kxu33gqu" path="res://assets/Themes/main_theme.tres" id="2_287tu"]
[ext_resource type="Texture2D" uid="uid://cd77jqa7r2q3r" path="res://assets/empty_health_fix.png" id="3_0830c"]
[ext_resource type="Texture2D" uid="uid://cntsj5xvq8hoj" path="res://assets/OnlyHealth.png" id="5_0830c"]

[node name="Enemy" type="Node2D"]
script = ExtResource("1_0830c")

[node name="enemy_texture" type="Sprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(0.4, 0.4)
texture = ExtResource("1_hghv2")

[node name="Control" type="Control" parent="enemy_texture"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("2_287tu")

[node name="enemy_health" type="TextureProgressBar" parent="enemy_texture/Control"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 0
offset_left = -408.0
offset_top = -402.0
offset_right = 120.0
offset_bottom = -322.0
scale = Vector2(1.5, 1.5)
value = 100.0
texture_under = ExtResource("3_0830c")
texture_progress = ExtResource("5_0830c")
texture_progress_offset = Vector2(98, 22)

[node name="enemy_health_text" type="Label" parent="enemy_texture/Control/enemy_health"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -23.333345
offset_right = 82.0
offset_bottom = 17.666656
grow_horizontal = 2
grow_vertical = 2

[node name="enemy_name" type="Label" parent="enemy_texture/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -276.0
offset_top = -492.0
offset_right = 27.00003
offset_bottom = -451.0
scale = Vector2(2, 2)
text = "Slime"
horizontal_alignment = 1
vertical_alignment = 1
